Fixing api get for user
