# controller/controllerimpl/user_controller_impl.go
@@ -11,79 +11,79 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-type RoleControllerImpl struct {
-	RoleService service.RoleService
+type UserControllerImpl struct {
+	UserService service.UserService
 }
 
-func NewRoleController(roleService service.RoleService) controller.RoleController {
-	return &RoleControllerImpl{
-		RoleService: roleService,
+func NewUserController(userService service.UserService) controller.UserController {
+	return &UserControllerImpl{
+		UserService: userService,
 	}
 }
 
-// @Tags	Role
+// @Tags	User
 // @Accept	json
 // @Produce	json
-// @Param	request 		body	request.RoleRequest	true	"Request body"
-// @Success	200	{object}	response.WebResponse{data=response.RoleResponse}
+// @Param	request 		body	request.UserCreateRequest	true	"Request body"
+// @Success	200	{object}	response.WebResponse{data=response.UserResponse}
 // @Failure	400	{object}	response.WebResponse
 // @Failure	500	{object}	response.WebResponse
-// @Router	/roles			[post]
-func (roleController *RoleControllerImpl) Create(ctx *fiber.Ctx) error {
-	request := helper.BodyParser[request.RoleRequest](ctx)
+// @Router	/users			[post]
+func (userController *UserControllerImpl) Create(ctx *fiber.Ctx) error {
+	request := helper.BodyParser[request.UserCreateRequest](ctx)
 
-	response := roleController.RoleService.Create(request)
+	response := userController.UserService.Create(request)
 	return ctx.JSON(helper.BuildSuccessResponse(response))
 }
 
-// @Tags	Role
-// @Accept	json
-// @Produce	json
-// @Param	id				path	int					true	"id"
-// @Param	request 		body	request.RoleRequest	true	"Request body"
-// @Success	200	{object}	response.WebResponse{data=response.RoleResponse}
-// @Failure	400	{object}	response.WebResponse
-// @Failure	500	{object}	response.WebResponse
-// @Router	/roles/id/{id}		[put]
-func (roleController *RoleControllerImpl) Update(ctx *fiber.Ctx) error {
-	id := helper.GetParamId(ctx, constant.ID)
-	request := helper.BodyParser[request.RoleRequest](ctx)
-
-	response := roleController.RoleService.Update(id, request)
-	return ctx.JSON(helper.BuildSuccessResponse(response))
-}
-
-// @Tags	Role
+// @Tags	User
 // @Accept	json
 // @Produce	json
 // @Param	id				path	int					true	"id"
-// @Success	200	{object}	response.WebResponse{data=response.RoleResponse}
+// @Param	request 		body	request.UserUpdateRequest	true	"Request body"
+// @Success	200	{object}	response.WebResponse{data=response.UserResponse}
 // @Failure	400	{object}	response.WebResponse
 // @Failure	500	{object}	response.WebResponse
-// @Router	/roles/id/{id} 	[get]
-func (roleController *RoleControllerImpl) FindById(ctx *fiber.Ctx) error {
+// @Router	/users/id/{id}	[put]
+func (userController *UserControllerImpl) Update(ctx *fiber.Ctx) error {
 	id := helper.GetParamId(ctx, constant.ID)
+	request := helper.BodyParser[request.UserUpdateRequest](ctx)
 
-	response := roleController.RoleService.FindById(id)
+	response := userController.UserService.Update(id, request)
 	return ctx.JSON(helper.BuildSuccessResponse(response))
 }
 
-// @Tags	Role
+// @Tags	User
+// @Accept	json
+// @Produce	json
+// @Param	id				path	int					true	"id"
+// @Success	200	{object}	response.WebResponse{data=response.UserResponse}
+// @Failure	400	{object}	response.WebResponse
+// @Failure	500	{object}	response.WebResponse
+// @Router	/users/id/{id} 	[get]
+func (userController *UserControllerImpl) FindById(ctx *fiber.Ctx) error {
+	id := helper.GetParamId(ctx, constant.ID)
+
+	response := userController.UserService.FindById(id)
+	return ctx.JSON(helper.BuildSuccessResponse(response))
+}
+
+// @Tags	User
 // @Accept	json
 // @Produce	json
 // @Param   search  		query	string	false	"Search"
-// @Success	200	{object}	response.WebResponse{data=[]response.RoleResponse}
+// @Success	200	{object}	response.WebResponse{data=[]response.UserResponse}
 // @Failure	400	{object}	response.WebResponse
 // @Failure	500	{object}	response.WebResponse
-// @Router	/roles/all		[get]
-func (roleController *RoleControllerImpl) FindAll(ctx *fiber.Ctx) error {
+// @Router	/users/all		[get]
+func (userController *UserControllerImpl) FindAll(ctx *fiber.Ctx) error {
 	search := dto.BuildSearch(ctx.Query(constant.SEARCH))
 
-	response := roleController.RoleService.FindAll(&search)
+	response := userController.UserService.FindAll(&search)
 	return ctx.JSON(helper.BuildSuccessResponse(response))
 }
 
-// @Tags	Role
+// @Tags	User
 // @Accept	json
 // @Produce	json
 // @Param   search  		query	string	false	"Search"
@@ -92,29 +92,29 @@ func (roleController *RoleControllerImpl) FindAll(ctx *fiber.Ctx) error {
 // @Success	200	{object}	response.WebResponse{data=[]response.PaginationResponse}
 // @Failure	400	{object}	response.WebResponse
 // @Failure	500	{object}	response.WebResponse
-// @Router	/roles			[get]
-func (roleController *RoleControllerImpl) FindAllPagination(ctx *fiber.Ctx) error {
+// @Router	/users			[get]
+func (userController *UserControllerImpl) FindAllPagination(ctx *fiber.Ctx) error {
 	search := dto.BuildSearch(ctx.Query(constant.SEARCH))
 
 	pageNumber := ctx.Query(constant.PAGE_NUMBER)
 	pageSize := ctx.Query(constant.PAGE_SIZE)
 	pagination := dto.BuildPagination(pageNumber, pageSize)
 
-	response := roleController.RoleService.FindAllPagination(&search, &pagination)
+	response := userController.UserService.FindAllPagination(&search, &pagination)
 	return ctx.JSON(helper.BuildSuccessResponse(response))
 }
 
-// @Tags	Role
+// @Tags	User
 // @Accept	json
 // @Produce	json
 // @Param	id				path	int					true	"id"
-// @Success	200	{object}	response.WebResponse{data=response.RoleResponse}
+// @Success	200	{object}	response.WebResponse{data=response.UserResponse}
 // @Failure	400	{object}	response.WebResponse
 // @Failure	500	{object}	response.WebResponse
-// @Router	/roles/id/{id} 	[delete]
-func (roleController *RoleControllerImpl) Delete(ctx *fiber.Ctx) error {
+// @Router	/users/id/{id} 	[delete]
+func (userController *UserControllerImpl) Delete(ctx *fiber.Ctx) error {
 	id := helper.GetParamId(ctx, constant.ID)
 
-	response := roleController.RoleService.Delete(id)
+	response := userController.UserService.Delete(id)
 	return ctx.JSON(helper.BuildSuccessResponse(response))
 }
