# model/domain/user.go
@@ -5,7 +5,8 @@ type User struct {
 	Name       string     `gorm:"column:name"`
 	Username   string     `gorm:"column:username"`
 	Password   string     `gorm:"column:password"`
-	Role       Role       `gorm:"foreignKey:role_id;references:id"`
+	RoleID     int64      `gorm:"column:role_id"`
+	Role       *Role      `gorm:"foreignKey:RoleID;references:ID"`
 	BaseDomain BaseDomain `gorm:"embedded"`
 }
 
